# soy_calidad_challenge_one

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
soy_calidad_challenge_1/: product.py  product_manager.py
tests/: test_product.py  test_product_manager.py
utils/: menu.py
