[project]
name = "soy-calidad-challenge-1"
version = "0.1.0"
description = "This is my solution approach to 'soy calidad' first challenge."
authors = [
    {name = "Christian Tarifeno",email = "christiantarifer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
autopep8 = "^2.3.1"

